# filesystem-viewer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  git.rs  main.rs  runtime.rs  ui.rs
src/app/: core_impl.rs  editor_impl.rs  interaction_impl.rs  tree_impl.rs  watcher.rs
src/git/: diff_impl.rs  files_impl.rs  manager_core_impl.rs  status_impl.rs  types_and_tests.rs
src/ui/: editor_preview.rs  layout_render.rs  overlays.rs  tree_status.rs
