[package]
name = "fsv"
version = "0.1.0"
edition = "2021"
description = "A lightweight terminal file system viewer with Git status"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# TUI 渲染
ratatui = "0.29"
# 跨平台终端操作
crossterm = "0.28"
# Git 操作 - 直接使用命令
# 文件监听
notify = "7.0"
# 错误处理
anyhow = "1.0"
# 时间处理
chrono = "0.4"
# Unicode 宽度计算（光标定位）
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
